# main

./: .bazelignore  .gitignore  README.md  WORKSPACE  deps.bzl
.github/workflows/: brain.yaml
bazel/: BUILD.bazel  README.md  actions.bzl  def.bzl  providers.bzl  rules.bzl
brain/: BUILD.bazel  go.mod  main.go
powerhouse/: BUILD.bazel  go.mod  main.go
pulse/: BUILD.bazel  README.md
