load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel:def.bzl", "go_binary")

go_binary(
  name = "run",
  srcs = [
    "main.go",
  ]
)

# go_library(
#     name = "brain_source",
#     srcs = glob(["**/*.go"]),
# #    importpath = "github.com/DaliborDev/monorepo/pulse",
#     visibility = ["//visibility:__subpackages__"],
#     deps = [
# #        "//pulse/internal",
#     ],
# )

# go_binary(
#     name = "run",
#     data = glob([
#         "files/*",
#     ]),
#     embed = [
#         ":brain_source",
#     ],
# )